force-app/src/objects/ffcmutil__CashMatchingHistoryLogInfo__c.object
<CustomObject>
    <fields>
        <fullName>ffcmutil__AccountOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__AccountValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A cash matching history record will refer to the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistoriesInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Action__c</fullName>
        <description>The reason for the creation of the record.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Currency Write-off</fullName>
                </value>
                <value>
                    <fullName>Undo Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffcmutil__CashMatchingHistoryName__c</fullName>
        <label>Cash Matching History Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__CashMatchingHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Matching History</label>
        <referenceTo>c2g__codaCashMatchingHistory__c</referenceTo>
        <relationshipLabel>Matching Histories To Process</relationshipLabel>
        <relationshipName>MatchingHistoriesToProcessInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__CreationDate__c</fullName>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DiscountDate__c</fullName>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentNumber__c</fullName>
        <formula>ffcmutil__TransactionLineItem__r.c2g__Transaction__r.c2g__DocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentType__c</fullName>
        <formula>ffcmutil__TransactionLineItem__r.c2g__Transaction__r.ffcmutil__TransactionTypeText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DocumentValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DualOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__DualValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__HomeOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__HomeValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sequential number – the order of creation</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__MatchingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistoriesInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__MatchingDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when the line was matched in allocation</description>
        <label>Matching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffcmutil__MatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking matched lines</description>
        <label>Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Matching Reference)</relationshipLabel>
        <relationshipName>MatchingHistoriesInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistoriesInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistoriesInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__ToProcess__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A transaction line may have many cash matching history records if its type is account; analysis and tax lines do not have a history</description>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistoriesInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffcmutil__UndoMatchingReference__c</fullName>
        <label>Undo Matching Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__UndoReason__c</fullName>
        <description>The reason for matching being undone</description>
        <label>Undo Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matching Error</fullName>
                </value>
                <value>
                    <fullName>Remittance Advice Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffcmutil__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cash Matching History Log Info</label>
    <nameField>
        <label>Cash Matching History Log Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Matching History Logs Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>